feat(shopping): complete CRUD
