# docs/swagger.yaml
@@ -228,6 +228,35 @@ definitions:
     required:
     - costPercentage
     type: object
+  github_com_hifat_mallow-sale-api_internal_shopping.ReqUpdateIsComplete:
+    properties:
+      isComplete:
+        type: boolean
+    type: object
+  github_com_hifat_mallow-sale-api_internal_shopping.Request:
+    properties:
+      isComplete:
+        type: boolean
+      name:
+        type: string
+      purchaseQuantity:
+        type: number
+      purchaseUnit:
+        $ref: '#/definitions/github_com_hifat_mallow-sale-api_internal_usageUnit.UsageUnitReq'
+    type: object
+  github_com_hifat_mallow-sale-api_internal_shopping.Response:
+    properties:
+      id:
+        type: string
+      isComplete:
+        type: boolean
+      name:
+        type: string
+      purchaseQuantity:
+        type: number
+      purchaseUnit:
+        $ref: '#/definitions/github_com_hifat_mallow-sale-api_internal_usageUnit.Prototype'
+    type: object
   github_com_hifat_mallow-sale-api_internal_stock.Request:
     properties:
       inventoryID:
@@ -335,6 +364,14 @@ definitions:
       total:
         type: integer
     type: object
+  github_com_hifat_mallow-sale-api_pkg_handling.Response:
+    properties:
+      code:
+        type: string
+      data: {}
+      message:
+        type: string
+    type: object
   github_com_hifat_mallow-sale-api_pkg_handling.ResponseItem-github_com_hifat_mallow-sale-api_internal_inventory_Request:
     properties:
       item:
@@ -364,6 +401,11 @@ definitions:
     properties:
       item:
         $ref: '#/definitions/github_com_hifat_mallow-sale-api_internal_recipe.Response'
+    type: object
+  github_com_hifat_mallow-sale-api_pkg_handling.ResponseItem-github_com_hifat_mallow-sale-api_internal_shopping_Request:
+    properties:
+      item:
+        $ref: '#/definitions/github_com_hifat_mallow-sale-api_internal_shopping.Request'
     type: object
   github_com_hifat_mallow-sale-api_pkg_handling.ResponseItem-github_com_hifat_mallow-sale-api_internal_stock_Request:
     properties:
@@ -412,6 +454,15 @@ definitions:
       meta:
         $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.MetaResponse'
     type: object
+  github_com_hifat_mallow-sale-api_pkg_handling.ResponseItems-github_com_hifat_mallow-sale-api_internal_shopping_Response:
+    properties:
+      items:
+        items:
+          $ref: '#/definitions/github_com_hifat_mallow-sale-api_internal_shopping.Response'
+        type: array
+      meta:
+        $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.MetaResponse'
+    type: object
   github_com_hifat_mallow-sale-api_pkg_handling.ResponseItems-github_com_hifat_mallow-sale-api_internal_stock_Response:
     properties:
       items:
@@ -429,12 +480,6 @@ definitions:
         type: array
       meta:
         $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.MetaResponse'
-    type: object
-  github_com_hifat_mallow-sale-api_pkg_handling.Response:
-    properties:
-      data: {}
-      message:
-        type: string
     type: object
 info:
   contact:
@@ -816,6 +861,9 @@ paths:
         name: page
         type: integer
       - in: query
+        name: recipeTypeCode
+        type: string
+      - in: query
         name: search
         type: string
       - default: createdAt
@@ -1041,6 +1089,126 @@ paths:
       summary: Update Settings
       tags:
       - settings
+  /shoppings:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ResponseItems-github_com_hifat_mallow-sale-api_internal_shopping_Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ErrorResponse'
+      summary: Find Shoppings
+      tags:
+      - shopping
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Created shopping data
+        in: body
+        name: shopping
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_hifat_mallow-sale-api_internal_shopping.Request'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ResponseItem-github_com_hifat_mallow-sale-api_internal_shopping_Request'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ErrorResponse'
+      summary: Create Shopping
+      tags:
+      - shopping
+  /shoppings/{id}:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: Shopping ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ErrorResponse'
+      summary: Delete Shopping by ID
+      tags:
+      - shopping
+  /shoppings/{id}/is-complete:
+    patch:
+      consumes:
+      - application/json
+      parameters:
+      - description: shopping ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Updated shopping is complete
+        in: body
+        name: shopping
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_hifat_mallow-sale-api_internal_shopping.ReqUpdateIsComplete'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_hifat_mallow-sale-api_pkg_handling.ErrorResponse'
+      summary: Update Shopping Is Complete
+      tags:
+      - shopping
   /stocks:
     get:
       consumes:
