# internal/shopping/entity.go
@@ -6,10 +6,10 @@ import (
 )
 
 type Entity struct {
-	utilsModule.Base
+	utilsModule.Base `bson:"inline"`
 
-	Name             string                 `fake:"{name}" bson:"name"`
-	PurchaseQuantity float64                `fake:"{float64}" bson:"purchase_quantity"`
-	PurchaseUnit     usageUnitModule.Entity `bson:"purchase_unit"`
-	IsComplete       bool                   `bson:"is_complete"`
+	Name             string                 `fake:"{name}" bson:"name" json:"name"`
+	PurchaseQuantity float64                `fake:"{float64}" bson:"purchase_quantity" json:"purchaseQuantity"`
+	PurchaseUnit     usageUnitModule.Entity `bson:"purchase_unit" json:"purchaseUnit"`
+	IsComplete       bool                   `bson:"is_complete" json:"isComplete"`
 }
